# stream-clipper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: analyzer.rs  extractor.rs  mod.rs  types.rs  vad.rs
src-tauri/src/chat/: analyzer.rs  mod.rs  parser.rs  types.rs
src-tauri/src/commands/: analyze.rs  config.rs  export.rs  license.rs  mod.rs
src-tauri/src/highlight/: merger.rs  mod.rs  scorer.rs  types.rs
src-tauri/src/license/: mod.rs  validator.rs
src-tauri/src/pro/: _c.rs  _v.rs  mod.rs
src-tauri/src/utils/: ffmpeg.rs  mod.rs  time.rs
src-tauri/src/video/: clipper.rs  info.rs  mod.rs  types.rs
src/lib/components/: ChatDropzone.svelte  ClipCard.svelte  ClipsList.svelte  ClipsTheater.svelte  DetectionSettings.svelte  ExportPanel.svelte  FileInfo.svelte  Header.svelte  ImportView.svelte  MainContent.svelte  Timeline.svelte  VideoDropzone.svelte  WorkspaceView.svelte  index.ts
src/lib/components/modals/: ClipPreviewModal.svelte  KeywordEditorModal.svelte  LicenseModal.svelte  SettingsModal.svelte  index.ts
src/lib/components/shared/: Button.svelte  ProBadge.svelte  ProgressBar.svelte  Slider.svelte  Toast.svelte  ToastContainer.svelte  index.ts
src/lib/stores/: highlights.ts  index.ts  license.ts  project.ts  settings.ts  ui.ts
src/lib/types/: index.ts
src/lib/utils/: format.ts  index.ts  tauri.ts
src/routes/: +page.svelte
