[package]
name = "stream-clipper"
version = "0.1.0"
description = "Auto-detect highlight moments from streaming videos and generate clips"
authors = ["Stream Clipper Team"]
edition = "2021"
default-run = "stream-clipper"

[lib]
name = "stream_clipper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "stream-clipper"
path = "src/main.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio processing
hound = "3.5"              # WAV file reading
webrtc-vad = "0.4"         # Voice Activity Detection

# Async runtime
tokio = { version = "1", features = ["full"] }

# Parallel processing
rayon = "1.10"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
regex = "1"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
whoami = "1"
rand = { version = "0.9.2", features = ["small_rng"] }

# Release optimizations (balanced for AV compatibility)
[profile.release]
opt-level = 3           # Maximum optimization
lto = "thin"            # Thin LTO (less aggressive, better AV compatibility)
codegen-units = 16      # Default codegen units
panic = "unwind"        # Standard panic handling
strip = false           # Keep symbols (helps AV analysis)

